--- a/src/app/page/newpassword/newpassword.component.html
+++ b/src/app/page/newpassword/newpassword.component.html
@@ -1,7 +1,6 @@
-
 <div class="main-content">
   <div class="sidebar">
-      <button class="btn btn-light">Thông tin tài khoản</button>
+      <button routerLink="/newpass" class="btn btn-light">Thông tin tài khoản</button>
       <button routerLink="/order" class="btn btn-light">Đơn hàng</button>
       <button class="btn btn-light">Đổi mật khẩu</button>
       <button routerLink="/login" class="btn btn-danger">Đăng xuất</button>
