--- a/src/app/page/cart/cart.component.scss
+++ b/src/app/page/cart/cart.component.scss
@@ -1,57 +1,99 @@
-/* cart.component.css */
+// order.component.scss
 body {
   font-family: Arial, sans-serif;
 }
 
-.cart-item {
+.container {
   display: flex;
-  align-items: center;
   justify-content: space-between;
-  background-color: #4d4d4d;
+  padding: 20px;
+  border: 1px solid #000;
+}
+
+.left, .right {
+  width: 48%;
+}
+h2{
+  align-items: center;
+}
+.left input[type="text"] {
+  width: 100%;
   padding: 10px;
   margin-bottom: 10px;
-  margin: 30px 0;
-  width: 50%;
-  margin-left:30% ;
+  border: 1px solid #000;
+  box-sizing: border-box;
 }
 
-.cart-item img {
-  width: 50px;
-  height: 50px;
-  margin-right: 10px;
+.left .payment-method {
+  margin-bottom: 10px;
 }
 
-.cart-item div {
+.left .payment-method button {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #000;
   background-color: #fff;
-  padding: 5px 10px;
-  margin-right: 10px;
-}
-
-.cart-item .remove {
-  padding: 0;
-  color: red;
-  font-size: 30px;
   cursor: pointer;
-  border-radius: 50%;
 }
 
-.total {
-  margin: 30px 0;
-  margin-left: 60%;
+.right {
+  border: 1px solid #000;
+  padding: 10px;
+  box-sizing: border-box;
 }
 
-.total input {
-  margin-left: 10px;
+.right .item {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
 }
 
-.actions {
-  margin: 30px 0;
-  margin-left: 40%;
+.right .item div {
+  width: 24%;
+  text-align: center;
+  border: 1px solid #000;
+  padding: 5px;
+  box-sizing: border-box;
 }
 
-.actions button {
-  margin-right: 10px;
-  margin-left: 15%;
-  padding: 7px 15px;
-  background-color: #656363;
+.right .total, .right .shipping, .right .grand-total {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+.right .total div, .right .shipping div, .right .grand-total div {
+  width: 48%;
+  text-align: center;
+  border: 1px solid #000;
+  padding: 5px;
+  box-sizing: border-box;
+}
+.total-input{
+  background-color: #959090;
+}
+.right .total .total-label{
+  border: none;
+}
+.right .shipping .total-label{
+  border: none;
+}
+.right .grand-total .total-label{
+  border: none;
+}
+
+// .right .grand-total {
+//   background-color: #000;
+//   color: #fff;
+// }
+
+.right .cart-button {
+  text-align: center;
+}
+
+.right .cart-button button {
+  padding: 10px 20px;
+  border: 1px solid #000;
+  background-color: #fff;
+  cursor: pointer;
 }
