--- a/src/app/page/newpassword/newpassword.component.scss
+++ b/src/app/page/newpassword/newpassword.component.scss
@@ -1,22 +1,9 @@
-
-.logo,
-.nav-item,
-.search-bar,
-.icons,
-.footer-item {
-  border: 1px solid #000;
+.header, .main, .footer {
+  width: 100%;
+  height: auto;
+  text-align: center;
   padding: 10px;
-}
-
-.search-bar {
-  display: flex;
-  align-items: center;
-}
-
-.search-bar input {
-  padding: 5px;
   border: 1px solid #000;
-  border-right: none;
 }
 
 .main-content {
@@ -26,62 +13,63 @@
   border: 1px solid #000;
 }
 
-.sidebar,
-.account-info {
-  border: none;
-  padding: 20px;
-}
-
 .sidebar {
   border: 1px solid #000;
   display: flex;
-  justify-content:space-evenly;
-  width: 17%;
-  flex-direction: column; /* Sắp xếp các nút theo chiều dọc */
-}
+  flex-direction: column;
+  width: 20%;
+  padding: 20px;
 
-.sidebar button {
-  margin-bottom: 10px; /* Cách đều giữa các nút */
-  padding: 10px;
-  cursor: pointer;
+  button {
+    margin-bottom: 10px;
+    padding: 10px;
+    cursor: pointer;
+    background-color: #f8f9fa;
+    border: 1px solid #ccc;
+
+    &:hover {
+      background-color: #e2e6ea;
+    }
+  }
 }
 
 .account-info {
   display: flex;
-  flex-direction: column; /* Để các phần tử bên trong xếp chồng lên nhau */
-  align-items: center; /* Canh giữa các phần tử trong account-info */
-  width: 100%; /* Chiếm hết chiều rộng */
-  justify-content: flex-end;
-}
+  flex-direction: column;
+  align-items: center;
+  width: 75%;
+  padding: 20px;
+  border: 1px solid #000;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 
-.account-info h2 {
-  text-align: center;
-}
+  h2 {
+    text-align: center;
+    margin-bottom: 20px;
+  }
 
-.account-info .form-group {
-  display: flex; /* Sử dụng flex để đặt label và input nằm ngang hàng */
-  align-items: center; /* Căn giữa theo chiều dọc */
-  margin-bottom: 10px; /* Cách giữa các nhóm form */
-  width: 100%; /* Chiếm hết chiều rộng */
-  justify-content: flex-end;
-  margin-left: -85%;
-}
+  .form-group {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+    width: 100%;
+    justify-content: center;
 
-.account-info label {
-  margin-right: 10px; /* Khoảng cách giữa label và input */
-}
+    label {
+      margin-right: 10px;
+      flex-basis: 10%;
+      text-align: right;
+    }
 
-.account-info input {
-  padding: 5px 20px;
-}
+    input {
+      padding: 5px 20px;
+      flex-basis: 20%;
+      text-align: center;
+    }
+  }
 
-.account-info button {
-  width: auto; /* Đặt width của nút sửa lại tự động */
-}
-.header, .main, .footer {
-  width: 100%; /* Chiều rộng của các phần tử */
-  height: 100%;
-  text-align: center; /* Căn giữa văn bản */
-  padding: 10px; /* Khoảng cách bên trong */
-  border: 1px solid #000; /* Viền nhẹ */
+  button {
+    width: auto;
+    margin-top: 10px;
+    padding: 10px 20px;
+  }
 }
